gcc/testsuite/g++.dg/lookup/using12.C
// PR c++/16707

int i;
using N::i; // { dg-error "declared|expected" }
